--- a/MySelf.WebClient/Content/style-mobile.css
+++ b/MySelf.WebClient/Content/style-mobile.css
@@ -1,5 +1,5 @@
 /*
-	Striped 2.0 by HTML5 Up!
+	Prologue 1.0 by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -8,264 +8,54 @@
 /* Basic                                                                         */
 /*********************************************************************************/
 
-	body, input, textarea
+	body,input,textarea,select
 	{
-		line-height: 1.75em;
-		font-size: 11pt;
-		letter-spacing: 0;
+		font-size: 14pt;
 	}
 
-	h2, h3, h4, h5, h6
+	h2
 	{
 		font-size: 1.5em;
+		letter-spacing: 0;
+		font-weight: 300;
 	}
 
-	section,
-	article
+	.container
 	{
-		clear: both;
+		padding: 0 15px 0 15px;
 	}
 
-	.button
+	.image.featured
 	{
-		display: block;
-		width: 100%;
-		font-size: 1.25em;
-		padding: 0.75em 0 0.75em 0;
-		margin: 0.5em 0 0.5em 0;
+		position: relative;
+		min-height: 10em;
+		overflow: hidden;
 	}
-
-	.pager
-	{
-	}
-
-		.pager .pages
+	
+		.image.featured img
 		{
-			display: none;
-		}
-
-/*********************************************************************************/
-/* Title Bar                                                                     */
-/*********************************************************************************/
-
-	#titleBar
-	{
-		background: #364050 url('images/bg1.png');
-	}
-
-	#titleBar .title
-	{
-		color: #fff;
-		line-height: 44px;
-		font-size: 1.25em;
-		font-family: 'Open Sans Condensed', sans-serif;
-		font-weight: 700;
-		letter-spacing: 0.1em;
-		text-shadow: -1px -1px 0px rgba(0,0,0,0.5);
-		box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
-		text-align: center;
-	}
-
-	#titleBar .toggle
-	{
-		text-indent: -9999px;
-		width: 80px;
-		height: 60px;
-		position: absolute;
-		left: 0;
-		top: 0;
-	}
-
-		#titleBar .toggle:before
-		{
-			content: '';
-			display: block;
-			position: absolute;
-			left: 7px;
-			top: 7px;
-			width: 50px;
-			height: 30px;
-			background: #c94663 url('images/bg1.png');
-			border-radius: 5px;
-			box-shadow: inset 0px 0px 0px 1px rgba(255,255,255,0.15), 0 0.025em 0.15em 0em rgba(0,0,0,0.25);
-		}
-
-		#titleBar .toggle:after
-		{
-			content: '';
-			display: block;
-			position: absolute;
-			left: 22px;
-			top: 15px;
-			width: 50px;
-			height: 30px;
-			background: url('images/mobileUI-site-nav-opener-bg.svg') 0 0 no-repeat;
-			opacity: 0.75;
-		}
-
-		#titleBar .toggle:active
-		{
-		}
-
-			#titleBar .toggle:active:before
-			{
-				background-color: #d95673;
-			}
-
-			#titleBar .toggle:active:after
-			{
-				opacity: 1.0;
-			}
-
-/*********************************************************************************/
-/* Side Panel                                                                    */
-/*********************************************************************************/
-
-	#sidePanel
-	{
-		background: #28303a url('images/bg1.png');
-	}
-
-/*********************************************************************************/
-/* Section/Article Types                                                         */
-/*********************************************************************************/
-
-	.is-post
-	{
-		padding-bottom: 5em;
-		margin-bottom: 6em;
-	}
-
-		.is-post .byline
-		{
-			font-size: 1em;
-			font-family: 'Source Sans Pro', sans-serif;
-			line-height: 1.5em;
-		}
-
-		.is-post .info
-		{
-			width: 100%;
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			border-top: solid 1px #ddd;
-			padding-top: 0.5em;
-		}
-
-			.is-post .info .date
-			{
-				display: inline;
-			}
+			position: relative;
+			height: 10em;
+			width: auto;
+			/*
+				Stuff below is automatically calculated using JS. It sucks, but there
+				doesn't appear to be a way to center the <img> inside its parent with
+				pure CSS (since we don't know its width).
 			
-				.is-post .info .date .year
-				{
-					display: none;
-				}
-				
-				.is-post .info .date .month span
-				{
-					display: none;
-				}
-
-			.is-post .info .stats
-			{
-				display: inline;
-				border-left: solid 1px #ddd;
-				margin-left: 0.5em;
-				padding-left: 0em;
-			}
-
-				.is-post .info .stats li
-				{
-					display: inline-block;
-					margin-right: 0.25em;
-				}
-
-					.is-post .info .stats li a
-					{
-						display: inline-block;
-						opacity: 0.5;
-					}
-
-						.is-post .info .stats li a:active
-						{
-							opacity: 1.0;
-						}
-
-/*********************************************************************************/
-/* Logo                                                                          */
-/*********************************************************************************/
-
-	#logo
-	{
-		display: none;
-	}
-
-/*********************************************************************************/
-/* Nav                                                                           */
-/*********************************************************************************/
-
-	#nav
-	{
-		margin-top: 0 !important;
-	}
-
-		#nav:before
-		{
-			display: none !important;
-		}
-		
-		#nav li:hover a
-		{
-			background: none;
+				left: 0;
+				margin-left: 0;
+			*/
 		}
 
 /*********************************************************************************/
-/* Content                                                                       */
-/*********************************************************************************/
-		
-	#content
-	{
-		margin-top: 44px;
-		padding: 3em 20px 2em 20px;
-	}
-
-/*********************************************************************************/
-/* Sidebar                                                                       */
+/* Main                                                                          */
 /*********************************************************************************/
 
-	#sidebar
+	#main
 	{
-		padding: 20px 12px 20px 10px;
-		background: #364050 url('images/bg1.png');
-		box-shadow: inset -1px 0 0 0 rgba(255,255,255,0.15), inset -0.1em 0 0.5em 0 rgba(0,0,0,0.25);
 	}
 	
-/*********************************************************************************/
-/* Copyright                                                                     */
-/*********************************************************************************/
-
-	#copyright
-	{
-		margin: 2em 0 0 0;
-		text-align: center;
-	}
-
-		#copyright p
+		#main > section
 		{
-			font-size: 0.9em;
-			line-height: 2em;
+			padding: 2em 0 2em 0;
 		}
-	
-		#copyright:before
-		{
-			height: 0.5em;
-			margin: 0 0 2em 0;
-		}
-
-
-#diaryGraph {
-    /*float: left;*/
-width:auto;
-}
