--- a/MySelf.WebClient/app/views/profile.view.html
+++ b/MySelf.WebClient/app/views/profile.view.html
@@ -1,7 +1,8 @@
-﻿<article class="is-post is-post-excerpt">
+﻿<div class="container">
     <header>
-        <h2>{{selectedprofile.name}}</h2>
+        <h2 class="alt">{{selectedprofile.name}}</h2>
     </header>
+
     <form name="logForm" class="css-form">
         <input type="number" min="1" max="800" name="value" required data-ng-model="item.value" placeholder="Type a numeric value" />
         <textarea data-ng-model="item.message" placeholder="Type a message (optional)"></textarea>
@@ -21,10 +22,9 @@
         <a href ng-click="setReport(log.logdate, 'day')">{{log.value}} - {{log.logdate}}</a>
     </div>
     <p ng-show="selectedprofile.logs == 0">There are not any logged values</p>
-    <div>
+    <footer>
         <label for="txtFriendEmail">Allow a friend to see your diary</label>
         <input type="text" ng-model="friendEmail" name="txtFriendEmail" id="Text1" />
         <button class="btn btn-default" ng-click="addFriend(friendEmail, selectedprofile.globalid)">Add friend</button>
-    </div>
-</article>
-
+    </footer>
+</div>
