--- a/MySelf.WebClient/app/views/profile.view.html
+++ b/MySelf.WebClient/app/views/profile.view.html
@@ -5,18 +5,19 @@
 
     <form name="logForm" class="css-form">
         <input type="number" min="1" max="800" name="value" required data-ng-model="item.value" placeholder="Type a numeric value" />
-        <textarea data-ng-model="item.message" placeholder="Type a message (optional)"></textarea>
+        <textarea style="display: none" data-ng-model="item.message" placeholder="Type a message (optional)"></textarea>
         <input type="text" ng-model="item.logDate" placeholder="Select a date and time" />
         <input type="hidden" data-ng-model="item.selectedProfileId" value="selectedprofile.globalid" />
         <button id="Button1" name="btnSubmit" ng-click="addValue()" class="btn btn-primary">Submit</button>
-    </form>
-    <div id="diaryGraph"></div>
+    </form>    
+    <!--<div id="diaryGraph"></div>-->
     <div>
         <p><a ng-href="../{{selectedprofile.securitylink}}" target="blank">{{selectedprofile.securitylink}}</a></p>
         <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length == 0">Share with a link</button>
         <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length > 0">Create new share link</button>
         <button class="btn btn-default" ng-click="deleteSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length > 0">Delete share link</button>
     </div>
+    <div ng-grid="myOptions"></div>
     <div class="valueinnerlist" ng-repeat="log in selectedprofile.logs | orderBy:LogDate:reverse">
         <button ng-click="remove(log)" class="btn btn-warning">X</button>
         <a href ng-click="setReport(log.logdate, 'day')">{{log.value}} - {{log.logdate}}</a>
