testing n3-charts in test proj

--- a/MySelf.WebClientTest/Views/Shared/_Layout.cshtml
+++ b/MySelf.WebClientTest/Views/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
         </footer>
         @Scripts.Render("~/bundles/jquery")
         @Scripts.Render("~/bundles/bootstrap")
+        @Scripts.Render("~/bundles/jslibs")
         @Scripts.Render("~/bundles/d3")
         @Scripts.Render("~/bundles/angular")
         @Scripts.Render("~/bundles/myselflog")
