--- a/MySelf.WebClientTest/Views/Shared/_Layout.cshtml
+++ b/MySelf.WebClientTest/Views/Shared/_Layout.cshtml
@@ -6,7 +6,8 @@
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
-        @Styles.Render("~/Content/bootstrap/base")
+        @* @Styles.Render("~/Content/bootstrap/base")*@
+        <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap.min.css" rel="stylesheet">
         @Scripts.Render("~/bundles/modernizr")
     </head>
     <body data-ng-app="myselflogApp">
