--- a/MySelf.WebClient/Content/myStyle.css
+++ b/MySelf.WebClient/Content/myStyle.css
@@ -1,3 +1,19 @@
 ﻿input[type="number"] {
     height: 20px;
 }
+
+#logDate {
+    
+}
+
+#logDate input[type="text"] {
+    height: 30px;
+}
+
+#logTime {
+    height: 110px;
+}
+
+#btnSubmit {
+    
+}
