--- a/MySelf.WebClient/Views/Shared/_Layout.cshtml
+++ b/MySelf.WebClient/Views/Shared/_Layout.cshtml
@@ -8,7 +8,6 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     @*@Styles.Render("~/Content/bootstrap/base")*@
-    
     @Styles.Render("~/Content/morriscss")
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600" rel="stylesheet" type="text/css" />
     <!--[if lte IE 8]><script src="../../Scripts/html5shiv.js"></script><![endif]-->
@@ -30,7 +29,7 @@
             window.location.hash = '';
         }
     </script>
-    
+    @Styles.Render("~/Content/myCss")
 </head>
 <body data-ng-app="myselflogApp">
     <div id="header" class="skel-panels-fixed">
