--- a/MySelf.WebClient/app/views/profile.view.html
+++ b/MySelf.WebClient/app/views/profile.view.html
@@ -22,15 +22,16 @@
         <input type="number" min="1" max="800" name="value" required data-ng-model="item.value" placeholder="Type a numeric value" style="height: 30px" />
         <textarea style="display: none" data-ng-model="item.message" placeholder="Type a message (optional)"></textarea>
         <!--<input type="text" ng-model="item.logDate" placeholder="Select a date and time" />-->
-        <div class="form-horizontal">
+        <div id="logDate">
             <input type="text" datepicker-popup="dd-MMMM-yyyy" ng-model="item.logDate" show-weeks="false" is-open="opened" min="minDate" max="'2015-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" />
-            <!--<button class="btn" ng-click="open()"><i class="icon-calendar"></i></button>-->
         </div>
-        <div ng-model="item.logTime" ng-change="changed()" class="well well-small" style="display: inline-block;">
+        <div id="logTime" ng-model="item.logTime" ng-change="changed()" class="well well-small" style="display: inline-block;">
             <timepicker hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></timepicker>
         </div>
         <input type="hidden" data-ng-model="item.selectedProfileId" value="selectedprofile.globalid" />
-        <button id="btnSubmit" name="btnSubmit" ng-click="addValue()" ng-disabled="loading" class="btn btn-primary">Submit</button>
+        <div id="logFormBotton">
+            <button id="btnSubmit" name="btnSubmit" ng-click="addValue()" ng-disabled="loading" class="btn btn-primary">Submit</button>    
+        </div>
     </form>
     <!--<div id="diaryGraph"></div>-->
     <div>
