--- a/MySelf.WebClient/Content/myStyle.css
+++ b/MySelf.WebClient/Content/myStyle.css
@@ -14,6 +14,11 @@
     height: 110px;
 }
 
-#btnSubmit {
-    
+.accordion-heading {
+    background-color: #EEE;
+}
+
+#footer {
+    background-color: transparent;
+    box-shadow: inset 0 0 0 0 rgba(0,0,0,0.05), inset 0 0.1em 0.1em 0 rgba(0,0,0,0.025);
 }
