--- a/MySelf.WebClient/app/views/profile.view.html
+++ b/MySelf.WebClient/app/views/profile.view.html
@@ -30,25 +30,36 @@
         </div>
         <input type="hidden" data-ng-model="item.selectedProfileId" value="selectedprofile.globalid" />
         <div id="logFormBotton">
-            <button id="btnSubmit" name="btnSubmit" ng-click="addValue()" ng-disabled="loading" class="btn btn-primary">Submit</button>    
+            <button id="btnSubmit" name="btnSubmit" ng-click="addValue()" ng-disabled="loading" class="btn btn-primary">Submit</button>
         </div>
     </form>
-    <!--<div id="diaryGraph"></div>-->
-    <div>
-        <p><a ng-href="../{{selectedprofile.securitylink}}" target="blank">{{selectedprofile.securitylink}}</a></p>
-        <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length == 0">Share with a link</button>
-        <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length > 0">Create new share link</button>
-        <button class="btn btn-default" ng-click="deleteSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length > 0">Delete share link</button>
-    </div>
-    <div ng-grid="myOptions"></div>
-    <div class="valueinnerlist" ng-repeat="log in selectedprofile.logs | orderBy:LogDate:reverse">
-        <button ng-click="remove(log)" class="btn btn-warning">X</button>
-        <a href ng-click="setReport(log.logdate, 'day')">{{log.value}} - {{log.logdate}}</a>
-    </div>
-    <p ng-show="selectedprofile.logs == 0">There are not any logged values</p>
+    <p><a ng-href="../{{selectedprofile.securitylink}}" target="blank">{{selectedprofile.securitylink}}</a></p>
+    <accordion close-others="oneAtATime">
+        <accordion-group heading="Static Header">
+            <accordion-heading>
+                Share profile options <!--<i class="icon-share"></i>-->
+            </accordion-heading>
+            <div id="profileOptions">
+                <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length == 0">Share with a link</button>
+                <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length > 0">Create new share link</button>
+                <button class="btn btn-default" ng-click="deleteSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length > 0">Delete share link</button>
+                <label for="txtFriendEmail">Allow a friend to see your diary</label>
+                <input type="text" ng-model="friendEmail" name="txtFriendEmail" id="txtFriendEmail" />
+                <button class="btn btn-default" ng-click="addFriend(friendEmail, selectedprofile.globalid)">Add friend</button>
+            </div>
+        </accordion-group>
+        <accordion-group>
+            <accordion-heading>
+                Show values <!--<i class="icon-th-list"></i>-->
+            </accordion-heading>
+            <div class="valueinnerlist" ng-repeat="log in selectedprofile.logs | orderBy:LogDate:reverse">
+                <button ng-click="remove(log)" class="btn btn-warning">X</button>
+                <a href ng-click="setReport(log.logdate, 'day')">{{log.value}} - {{log.logdate}}</a>
+            </div>
+            <p ng-show="selectedprofile.logs == 0">There are not any logged values</p>
+        </accordion-group>
+    </accordion>
+
     <footer>
-        <label for="txtFriendEmail">Allow a friend to see your diary</label>
-        <input type="text" ng-model="friendEmail" name="txtFriendEmail" id="Text1" />
-        <button class="btn btn-default" ng-click="addFriend(friendEmail, selectedprofile.globalid)">Add friend</button>
     </footer>
 </div>
