--- a/MySelf.WebClient/app/views/profile.view.html
+++ b/MySelf.WebClient/app/views/profile.view.html
@@ -19,7 +19,7 @@
         <alert ng-repeat="alert in alerts" type="alert.type" close="closeAlert($index)">{{alert.msg}}</alert>
     </script>
     <form name="logForm" class="css-form">
-        <input type="number" min="1" max="800" name="value" required data-ng-model="item.value" placeholder="Type a numeric value" style="height: 30px" />
+        <input type="number" min="1" max="800" name="value" data-ng-model="item.value" placeholder="Type a numeric value" style="height: 30px" />
         <textarea style="display: none" data-ng-model="item.message" placeholder="Type a message (optional)"></textarea>
         <!--<input type="text" ng-model="item.logDate" placeholder="Select a date and time" />-->
         <div id="logDate">
@@ -31,6 +31,7 @@
         <input type="hidden" data-ng-model="item.selectedProfileId" value="selectedprofile.globalid" />
         <div id="logFormBotton">
             <button id="btnSubmit" name="btnSubmit" ng-click="addValue()" ng-disabled="loading" class="btn btn-primary">Submit</button>
+            <button id="btnReset" name="btnReset" ng-click="resetItem()" ng-disabled="loading" class="btn btn-warning">Reset</button>
         </div>
     </form>
     <p><a ng-href="../{{selectedprofile.securitylink}}" target="blank">{{selectedprofile.securitylink}}</a></p>
