--- a/MySelf.WebClient/app/views/diary.view.html
+++ b/MySelf.WebClient/app/views/diary.view.html
@@ -20,6 +20,7 @@
     </button>
     <div id="diaryGraph"></div>
     <footer>
-        <span>average {{getAverage()}}</span>
+        <p>average {{getAverage()}}</p>
+        <input type="button" ng-click="reload()" value="Reload" class="btn btn-warning" id="btnReload" name="btnReload" />
     </footer>
 </div>
