--- a/MySelf.WebClient/Content/myStyle.css
+++ b/MySelf.WebClient/Content/myStyle.css
@@ -2,10 +2,6 @@
     height: 20px;
 }
 
-#logDate {
-    
-}
-
 #logDate input[type="text"] {
     height: 30px;
 }
@@ -21,4 +17,24 @@
 #footer {
     background-color: transparent;
     box-shadow: inset 0 0 0 0 rgba(0,0,0,0.05), inset 0 0.1em 0.1em 0 rgba(0,0,0,0.025);
+}
+
+#nav {
+    margin: 1.75em 1.5em 1.5em 1.5em;
+}
+
+#logo h1 {
+    font-size: 1.5em;
+}
+
+#logo .byline {
+    font-size: 1.0em;
+}
+
+#loginForm ol label {
+    text-align: center;
+}
+
+#registerForm ol label {
+    text-align: center;
 }
