--- a/MySelf.WebClient/Views/Shared/_UserSettings.cshtml
+++ b/MySelf.WebClient/Views/Shared/_UserSettings.cshtml
@@ -3,7 +3,9 @@
         Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })
         @using (Html.BeginForm("LogOff", "Account", new { area = "" }, FormMethod.Post, new { id = "logoutForm" })) {
             @Html.AntiForgeryToken()
-            <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
+            <br/><br/>
+            <input type="submit" id="btnLogOff" name="btnLogOff" value="Log off" class="btn btn-primary" />
+            @*<a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>*@
         }
     </text>
 }
