--- a/MySelf.WebClient/app/views/profile.view.html
+++ b/MySelf.WebClient/app/views/profile.view.html
@@ -52,7 +52,7 @@
                     <div class="valueinnerlist" ng-repeat="friend in selectedprofile.friends | orderBy:email">
                         <button ng-click="removeFriend(friend.email)" class="btn btn-warning">X</button>
                         {{friend.email}}
-                        <button ng-click="sendFriendInvite(friend.email)" class="btn btn-primary">Invite</button>
+                        <button ng-click="openInvite(friend.email)" class="btn btn-primary">Invite</button>
                     </div>
                 </form>
             </div>
