--- a/MySelf.WebClient/app/views/profile.view.html
+++ b/MySelf.WebClient/app/views/profile.view.html
@@ -1,15 +1,17 @@
 ﻿<script type="text/ng-template" id="myModalContent.html">
         <div class="modal-header">
-            <h3></h3>
+            <h3>Send an invite to your friend to see {{selectedprofile.name}}</h3>
         </div>
         <div class="modal-body">
-            <p>Work in progress...</p>
+            <textarea id="message" name="message" ng-model="message"></textarea>            
         </div>
-        <!--<div class="modal-footer">
+        <div class="modal-footer">
             <button class="btn btn-primary" ng-click="ok()">OK</button>
             <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-        </div>-->
+        </div>
 </script>
+
+
 
 <div class="container">
     <header>
