--- a/MySelf.WebClient/app/views/profile.view.html
+++ b/MySelf.WebClient/app/views/profile.view.html
@@ -1,9 +1,9 @@
-﻿<script type="text/ng-template" id="myModalContent.html">
+﻿<script type="text/ng-template" id="mySendInviteModalContent.html">
         <div class="modal-header">
             <h3>Send an invite to your friend to see {{selectedprofile.name}}</h3>
         </div>
         <div class="modal-body">
-            <textarea id="message" name="message" ng-model="message"></textarea>            
+            <textarea id="message" name="message"></textarea>            
         </div>
         <div class="modal-footer">
             <button class="btn btn-primary" ng-click="ok()">OK</button>
