--- a/MySelf.WebClient/Views/Shared/_Layout.cshtml
+++ b/MySelf.WebClient/Views/Shared/_Layout.cshtml
@@ -7,8 +7,8 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    @*@Styles.Render("~/Content/bootstrap/base")*@
     @Styles.Render("~/Content/morriscss")
+    @*@Styles.Render("~/Content/jqplotcss")*@
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600" rel="stylesheet" type="text/css" />
     <!--[if lte IE 8]><script src="../../Scripts/html5shiv.js"></script><![endif]-->
     @Scripts.Render("~/bundles/jquery")
@@ -86,6 +86,7 @@
     @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/raphael")
     @Scripts.Render("~/bundles/morris")
+ @*   @Scripts.Render("~/bundles/jqplot")*@
     @Scripts.Render("~/bundles/ajaxlogin")
     @Scripts.Render("~/bundles/bootstrap")
     @*<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>*@
