wip terapies graph

--- a/MySelf.WebClient/app/views/diary.view.html
+++ b/MySelf.WebClient/app/views/diary.view.html
@@ -19,6 +19,7 @@
         <!--<span class="glyphicon glyphicon-arrow-right"></span>-->
     </button>
     <div id="diaryGraph"></div>
+    <div id="terapiesGraph"></div>
     <footer>
         <p>average {{getAverage()}}</p>
         <input type="button" ng-click="reload()" value="Reload" class="btn btn-warning" id="btnReload" name="btnReload" />
