wip loading progress feature

--- a/MySelf.WebClient/Views/Shared/_Layout.cshtml
+++ b/MySelf.WebClient/Views/Shared/_Layout.cshtml
@@ -32,63 +32,68 @@
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap.min.css" rel="stylesheet">
     @Styles.Render("~/Content/myCss")
 </head>
-<body data-ng-app="myselflogApp">
-    <div id="header" class="skel-panels-fixed">
-        <div class="top">
-            <div id="logo">
-                <span class="image avatar48">
-                    @*<img src="images/avatar.jpg" alt="" />*@
-                </span>
-                <h1 id="title">MySelfLog</h1>
-                <span class="byline">Log your health</span>
-            </div>
-            <nav id="nav">
-                @Html.Partial("_UserSettings")
-                @*<ul>
+    <body data-ng-app="myselflogApp">
+        <div ng-controller="LoaderController">
+            <span class="navbar-spinner" ng-show="hasPendingRequests()">...
+                <img src="../../Content/images/spinner.gif" alt="loading in progress">
+            </span>
+        </div>
+        <div id="header" class="skel-panels-fixed">
+            <div class="top">
+                <div id="logo">
+                    <span class="image avatar48">
+                        @*<img src="images/avatar.jpg" alt="" />*@
+                    </span>
+                    <h1 id="title">MySelfLog</h1>
+                    <span class="byline">Log your health</span>
+                </div>
+                <nav id="nav">
+                    @Html.Partial("_UserSettings")
+                    @*<ul>
                     <li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="icon icon-home">Intro</span></a></li>
                     <li><a href="#portfolio" id="portfolio-link" class="skel-panels-ignoreHref"><span class="icon icon-th">Portfolio</span></a></li>
                     <li><a href="#about" id="about-link" class="skel-panels-ignoreHref"><span class="icon icon-user">About Me</span></a></li>
                     <li><a href="#contact" id="contact-link" class="skel-panels-ignoreHref"><span class="icon icon-envelope">Contact</span></a></li>
                 </ul>*@
-            </nav>
-        </div>
-        <div class="bottom">
-            <!-- Social Icons -->
-            @*<ul class="icons">
+                </nav>
+            </div>
+            <div class="bottom">
+                <!-- Social Icons -->
+                @*<ul class="icons">
                 <li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
                 <li><a href="#" class="icon icon-facebook"><span>Facebook</span></a></li>
                 <li><a href="#" class="icon icon-github"><span>Github</span></a></li>
                 <li><a href="#" class="icon icon-dribbble"><span>Dribbble</span></a></li>
                 <li><a href="#" class="icon icon-envelope"><span>Email</span></a></li>
             </ul>*@
+            </div>
         </div>
-    </div>
-    <div id="main">
-        <!-- Intro -->
-        <section id="top" class="one">
-            @RenderBody()
-        </section>
-    </div>
-    <!-- Footer -->
-    <div id="footer">
+        <div id="main">
+            <!-- Intro -->
+            <section id="top" class="one">
+                @RenderBody()
+            </section>
+        </div>
+        <!-- Footer -->
+        <div id="footer">
 
-        <!-- Copyright -->
-        <div class="copyright">
-            @*<p>&copy; 2013 Jane Doe. All rights reserved.</p>
+            <!-- Copyright -->
+            <div class="copyright">
+                @*<p>&copy; 2013 Jane Doe. All rights reserved.</p>
             <ul class="menu">
                 <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
                 <li>Images: <a href="http://ineedchemicalx.deviantart.com">Felicia Simion</a></li>
             </ul>*@
+            </div>
         </div>
-    </div>
-    @Scripts.Render("~/bundles/jslibs")
-    @RenderSection("scripts", false)
-    @Scripts.Render("~/bundles/jqueryui")
-    @Scripts.Render("~/bundles/raphael")
-    @Scripts.Render("~/bundles/morris")
- @*   @Scripts.Render("~/bundles/jqplot")*@
-    @Scripts.Render("~/bundles/ajaxlogin")
-    @Scripts.Render("~/bundles/bootstrap")
-    @*<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>*@
-</body>
+        @Scripts.Render("~/bundles/jslibs")
+        @RenderSection("scripts", false)
+        @Scripts.Render("~/bundles/jqueryui")
+        @Scripts.Render("~/bundles/raphael")
+        @Scripts.Render("~/bundles/morris")
+        @*   @Scripts.Render("~/bundles/jqplot")*@
+        @Scripts.Render("~/bundles/ajaxlogin")
+        @Scripts.Render("~/bundles/bootstrap")
+        @*<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>*@
+    </body>
 </html>
