implementing mixing terapies and values into the same graph; refactored refreshGraph method

--- a/MySelf.WebClient/app/views/diary.view.html
+++ b/MySelf.WebClient/app/views/diary.view.html
@@ -8,6 +8,7 @@
                 <a href data-ng-click="setReport(report)">{{ report.name }}</a>
             </li>
         </ul>
+        Show terapies <input type="checkbox" ng-model="showTerapies">
         <button type="button" class="btn btn-default" ng-click="isTerapiesGraphCollapsed = !isTerapiesGraphCollapsed">Show terapies</button>
     </div>
     <div>
