--- a/MySelf.WebClient/app/views/profile.view.html
+++ b/MySelf.WebClient/app/views/profile.view.html
@@ -32,9 +32,15 @@
         </div>
         <button class="btn btn-link" ng-click="isTerapyCollapsed = !isTerapyCollapsed">Log terapy</button>
         <div id="terapyPanel" collapse="isTerapyCollapsed">
+            <!--<input type="checkbox" ng-model="item.isslow"/>-->
+            <input type="number" min="0" max="200" name="slowvalue" data-ng-model="item.slowvalue" placeholder="SLOW terapy number" style="height: 30px"/>
+            <input type="number" min="0" max="200" name="fastvalue" data-ng-model="item.fastvalue" placeholder="FAST terapy number" style="height: 30px"/>
+        </div>
+        <button class="btn btn-link" ng-click="isFoodCollapsed = !isFoodCollapsed">Log food</button>
+        <div id="foodPanel" collapse="isFoodCollapsed">
             <!--<input type="checkbox" ng-model="item.isslow" />-->
-            <input type="number" min="0" max="200" name="slowvalue" data-ng-model="item.slowvalue" placeholder="SLOW terapy number" style="height: 30px" />
-            <input type="number" min="0" max="200" name="fastvalue" data-ng-model="item.fastvalue" placeholder="FAST terapy number" style="height: 30px" />
+            <!--<input type="number" min="0" max="200" name="slowvalue" data-ng-model="item.slowvalue" placeholder="SLOW terapy number" style="height: 30px" />
+            <input type="number" min="0" max="200" name="fastvalue" data-ng-model="item.fastvalue" placeholder="FAST terapy number" style="height: 30px" />-->
         </div>
         <input type="hidden" data-ng-model="item.selectedProfileId" value="selectedprofile.globalid" />
         <div id="logFormBotton">
